--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "tabWidth": 2,
-  "singleQuote": true
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "semi": true,
+  "printWidth": 200
 }
